[Win] WebKit version in user agent string is incorrect. https://bugs.webkit.org/show_bug.cgi?id=124454

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-11-18
Reviewed by Brent Fulgham.

Source/WebCore:

* DerivedSources.make: Generate WebKitVersion.h

Source/WebKit/win:

* WebView.cpp:
(webKitVersionString): Create WebKit version string from WebKitVersion.h.

Canonical link: https://commits.webkit.org/142696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159430 268f45cc-cd09-0410-ab3c-d52691b4dbfc