Source/WebKit/WebKit.vcxproj/WebKit/WebKitVersion.cmd
@@ -1,0 +1,6 @@
+set WEBKITVERSIONSCRIPT=%PROJECTDIR%..\..\scripts\generate-webkitversion.pl
+set WEBKITVERSIONCONFIG=%PROJECTDIR%..\..\mac\Configurations\Version.xcconfig
+set WEBKITVERSIONDIR=%CONFIGURATIONBUILDDIR%\include\WebKit
+set WEBKITVERSIONFILE=%WEBKITVERSIONDIR%\WebKitVersion.h
+
+bash -c 'perl "%WEBKITVERSIONSCRIPT%" --config "%WEBKITVERSIONCONFIG%"  --outputDir "%WEBKITVERSIONDIR%"'
